--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,15 +24,19 @@ jobs:
           echo "APP_VERSION=$(node -p -e "require('./package.json').version")" >> $GITHUB_ENV
           echo "APP_NAME=$(node -p -e "require('./package.json').name")" >> $GITHUB_ENV
 
+      - name: Install yarn
+        run: npm i -g yarn
+      - run: yarn --version
+
       - name: Install pnpm
         run: npm install --global pnpm
       - run: pnpm --version
 
-      - name: Install and build webview
-        run: npm run pre-package:extension
-
       - name: Install vsce
         run: npm install -g  @vscode/vsce
+
+      - name: Install and build webview
+        run: npm run pre-package:extension
 
       - name: Package Extension
         run: npm run package:extension
