--- a/package.json
+++ b/package.json
@@ -193,14 +193,14 @@
     "package:extension": "yarn && vsce package --yarn"
   },
   "dependencies": {
-    "@types/vscode": "^1.91.0",
     "@types/mocha": "^10.0.7",
     "@types/node": "20.x",
+    "@types/vscode": "^1.91.0",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.11.0",
+    "@vscode/codicons": "^0.0.35",
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.4.0",
-    "@vscode/codicons": "^0.0.35",
     "bible-reference-range": "^1.1.1",
     "deep-equal": "1.0.1",
     "eslint": "^8.57.0",
@@ -208,7 +208,9 @@
     "eslint-plugin-jsdoc": "^48.10.1",
     "fs-extra": "^11.2.0",
     "ospath": "^1.2.2",
+    "string-punctuation-tokenizer": "^2.2.0",
     "tc-source-content-updater": "^1.4.25",
+    "tsv-groupdata-parser": "^1.1.0",
     "typescript": "^5.4.5",
     "usfm-js": "^3.4.2",
     "yamljs": "^0.3.0"
