--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         run: npm run pre-package:extension
 
       - name: Package Extension
-        run: npm run package:extension
+        run: yarn run package:extension
 
       - name: Set artifact name
         run: echo "ARTIFACT_NAME=$(echo "$APP_NAME-$APP_VERSION-$HASH.vsix")" >> $GITHUB_ENV
