--- a/package.json
+++ b/package.json
@@ -192,6 +192,10 @@
     "pre-package:extension": "pnpm run install:all && pnpm run build:webview",
     "package:extension": "yarn && vsce package --yarn"
   },
+  "devDependencies": {
+    "@vscode/test-cli": "^0.0.9",
+    "@vscode/test-electron": "^2.4.0"
+  },
   "dependencies": {
     "@types/mocha": "^10.0.7",
     "@types/node": "20.x",
@@ -199,8 +203,6 @@
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.11.0",
     "@vscode/codicons": "^0.0.35",
-    "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.4.0",
     "bible-reference-range": "^1.1.1",
     "deep-equal": "1.0.1",
     "eslint": "^8.57.0",
