--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "checking-extension",
   "displayName": "checking-extension",
   "description": "A vscode extension to open tn_check and twl_check files for checking verses",
-  "version": "0.0.9-beta",
+  "version": "0.0.9-beta.2",
   "publisher": "unfoldingWord",
   "engines": {
     "vscode": "^1.91.0"
