--- a/package.json
+++ b/package.json
@@ -182,7 +182,6 @@
     "test-compile": "tsc -p ./",
     "compile": "npm run webpack",
     "watch": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
     "install:all": "pnpm run install:webview && pnpm install",
     "install:webview": "cd webview-ui && pnpm install",
     "build:all": "pnpm run build:webview && pnpm run compile",
@@ -192,9 +191,8 @@
     "pretest": "pnpm run compile && pnpm run lint",
     "lint": "eslint src --ext ts",
     "test": "vscode-test",
-    "pnpm-package:extension": "pnpm vsce package --no-dependencies",
     "pre-package:extension": "pnpm run install:webview && pnpm run build:webview",
-    "package:extension": "yarn install --prod && vsce package --yarn"
+    "package:extension": "yarn install && vsce package --yarn"
   },
   "devDependencies": {
     "@vscode/test-cli": "^0.0.9",
