Feature workflow UI tweaks (#20)
* workflow tweaks

* fix build

* fix dependencies

* clean cache

* try macOs builds

* fix build

* fix build

* trying to fix yarn build

* trying to fix yarn build

* trying to fix yarn build

* trying to fix yarn build

* trying to fix yarn build

* bump version

* Fix welcome view

* moved media so it will be included in vsix

* simplify build

* add webpack

* fixing webpack

* shrinking webpack

* bump version

---------

Co-authored-by: PhotoNomad0 <bruce.mclean@unfoldingword.org>

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -31,3 +31,15 @@ vsc-extension-quickstart.md
 **/*.map
 **/*.ts
 **/.vscode-test.*
+
+out/**
+node_modules/**
+test_files/**
+
+.prettierignore
+babel.config.json
+jest.config.js
+pnpm-lock.yaml
+webview-ui/pnpm-lock.yaml
+.github/**
+.idea/**
