--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+#    runs-on: macos-latest
 
     strategy:
       matrix:
@@ -24,18 +25,22 @@ jobs:
           echo "APP_VERSION=$(node -p -e "require('./package.json').version")" >> $GITHUB_ENV
           echo "APP_NAME=$(node -p -e "require('./package.json').name")" >> $GITHUB_ENV
 
+      - name: Install yarn
+        run: npm i -g yarn
+      - run: yarn --version
+
       - name: Install pnpm
         run: npm install --global pnpm
       - run: pnpm --version
 
+      - name: Install vsce
+        run: npm install -g @vscode/vsce
+
       - name: Install and build webview
         run: npm run pre-package:extension
 
-      - name: Install vsce
-        run: npm install -g  @vscode/vsce
-
       - name: Package Extension
-        run: npm run package:extension
+        run: yarn run package:extension
 
       - name: Set artifact name
         run: echo "ARTIFACT_NAME=$(echo "$APP_NAME-$APP_VERSION-$HASH.vsix")" >> $GITHUB_ENV
