--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "checking-extension",
   "displayName": "checking-extension",
   "description": "A vscode extension to open tn_check and twl_check files for checking verses",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "publisher": "unfoldingWord",
   "engines": {
     "vscode": "^1.91.0"
@@ -15,7 +15,7 @@
     "url": "https://github.com/unfoldingWord-box3/checking-extension"
   },
   "activationEvents": [],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
@@ -41,7 +41,7 @@
     "viewsWelcome": [
       {
         "view": "workbench.explorer.emptyView",
-        "contents": "==================\nTo Create a new checking project, click on the 'Create Checking Project' button below:\n[Create Checking Project](command:checking-extension.initTranslationChecker)"
+        "contents": "==================\nTo Create a new Translation Checking Project, click on the 'Create Checking Project' button below:\n[Create Checking Project](command:checking-extension.launchWorkflow)"
       }
     ],
     "walkthroughs": [
@@ -55,7 +55,7 @@
             "title": "Select Project Folder",
             "description": "First, let's open a folder where your new Codex project will be initialized.\n[Select Project Folder](command:checking-extension.selectFolder)",
             "media": {
-              "image": "./src/media/folder-active.png",
+              "image": "media/folder-active.png",
               "altText": "Select Project Folder"
             },
             "completionEvents": [
@@ -69,7 +69,7 @@
             "title": "Create new Project",
             "description": "First, let's open a folder where your new Codex project will be initialized.\n[Select Project Folder](command:checking-extension.selectFolder)",
             "media": {
-              "image": "./src/media/folder-active.png",
+              "image": "media/folder-active.png",
               "altText": "Select Project Folder"
             },
             "completionEvents": [
@@ -83,7 +83,7 @@
             "title": "Fetch Resource Catalog",
             "description": "We need to download Resource Catalog.\n[Download Catalog](command:checking-extension.downloadCatalog)",
             "media": {
-              "image": "./src/media/folder-active.png",
+              "image": "media/folder-active.png",
               "altText": "Select Project Folder"
             },
             "completionEvents": [
@@ -96,7 +96,7 @@
             "title": "Select gateway Language",
             "description": "Now that we have a folder, let's choose the Gateway Language options.\n[Select gateway Language](command:checking-extension.selectGL)",
             "media": {
-              "image": "./src/media/name-project.png",
+              "image": "media/name-project.png",
               "altText": "Select gateway Language"
             },
             "completionEvents": [
@@ -109,7 +109,7 @@
             "title": "Download Gateway Language Resources",
             "description": "Now that we have selected a Gateway Language, let's download the checking resources.\n[Download Resources](command:checking-extension.loadGlResources)",
             "media": {
-              "image": "./src/media/name-project.png",
+              "image": "media/name-project.png",
               "altText": "Download Gateway Language Resources"
             },
             "completionEvents": [
@@ -122,7 +122,7 @@
             "title": "Select Target Bible",
             "description": "Now that we have Gateway Language Resources, let's choose the Target Bible.\n[Select Target Bible](command:checking-extension.selectTargetBible)",
             "media": {
-              "image": "./src/media/name-project.png",
+              "image": "media/name-project.png",
               "altText": "Select target Language"
             },
             "completionEvents": [
@@ -136,7 +136,7 @@
             "title": "Download Target Bible",
             "description": "Now that we have selected a Target Bible, let's download the Target Bible.\n[Download Target Bible](command:checking-extension.loadTargetBible)",
             "media": {
-              "image": "./src/media/name-project.png",
+              "image": "media/name-project.png",
               "altText": "Download Target Language"
             },
             "completionEvents": [
@@ -150,7 +150,7 @@
             "title": "Project Initialized for Checking",
             "description": "Project is now ready for Checking",
             "media": {
-              "image": "./src/media/name-project.png",
+              "image": "media/name-project.png",
               "altText": "Download Target Language"
             },
             "completionEvents": [
@@ -163,7 +163,7 @@
             "title": "Initialize Project Checking",
             "description": "Now that we have checking resources downloaded, let's initialize the project for checking.\n[Initialize Checking](command:checking-extension.initializeChecking)",
             "media": {
-              "image": "./src/media/name-project.png",
+              "image": "media/name-project.png",
               "altText": "Download Target Language"
             },
             "completionEvents": [
@@ -176,29 +176,37 @@
     ]
   },
   "scripts": {
+    "vscode:prepublish": "webpack --mode production",
+    "webpack": "webpack --mode development",
+    "webpack-dev": "webpack --mode development --watch",
+    "test-compile": "tsc -p ./",
+    "compile": "npm run webpack",
+    "watch": "tsc -watch -p ./",
     "install:all": "pnpm run install:webview && pnpm install",
     "install:webview": "cd webview-ui && pnpm install",
     "build:all": "pnpm run build:webview && pnpm run compile",
     "start:webview": "cd webview-ui && pnpm run start",
     "build:webview": "cd webview-ui && pnpm run build",
     "build:webview-debug": "cd webview-ui && pnpm run build:dev",
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
     "pretest": "pnpm run compile && pnpm run lint",
     "lint": "eslint src --ext ts",
     "test": "vscode-test",
     "pre-package:extension": "pnpm run install:webview && pnpm run build:webview",
-    "package:extension": "npm install && vsce package"
+    "package:extension": "yarn install && vsce package --yarn"
   },
-  "dependencies": {
-    "@types/vscode": "^1.91.0",
-    "@types/mocha": "^10.0.7",
-    "@types/node": "20.x",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.11.0",
+  "devDependencies": {
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.4.0",
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@types/mocha": "^10.0.7",
+    "@types/node": "20.x",
+    "@types/vscode": "^1.91.0",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.11.0",
     "@vscode/codicons": "^0.0.35",
     "bible-reference-range": "^1.1.1",
     "deep-equal": "1.0.1",
@@ -206,8 +214,11 @@
     "eslint-config-eslint": "^11.0.0",
     "eslint-plugin-jsdoc": "^48.10.1",
     "fs-extra": "^11.2.0",
+    "original-fs": "^1.2.0",
     "ospath": "^1.2.2",
+    "string-punctuation-tokenizer": "^2.2.0",
     "tc-source-content-updater": "^1.4.25",
+    "tsv-groupdata-parser": "^1.1.0",
     "typescript": "^5.4.5",
     "usfm-js": "^3.4.2",
     "yamljs": "^0.3.0"
