--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -6,14 +6,23 @@
     "start": "vite",
     "build": "cross-env MINIFY=true npm run buildSub",
     "build:dev": "cross-env MINIFY=false npm run buildSub",
-    "buildSub": "tsc && vite build",
+    "buildSub": "tsc && npm run viteCompile",
+    "viteCompile": "cross-env NODE_OPTIONS=--max-old-space-size=6050 vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "11.13.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "4.0.0-alpha.61",
+    "@mui/lab": "5.0.0-alpha.89",
     "@vscode/webview-ui-toolkit": "^1.4.0",
-    "checking-tool-rcl": "0.9.7",
+    "checking-tool-rcl": "0.9.10-beta.7",
     "dompurify": "^3.0.9",
+    "gitea-react-toolkit": "2.4.0",
+    "localforage": "^1.10.0",
     "marked": "^12.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
