updated gitea-react-toolkit so it doesn't used path module that is not supported by vscode webview. fixed watch script, and added debug build options.  Switched from pnpm back to yarn for server side

--- a/package.json
+++ b/package.json
@@ -181,18 +181,20 @@
     "webpack-dev": "webpack --mode development --watch",
     "test-compile": "tsc -p ./",
     "compile": "npm run webpack",
-    "watch": "tsc -watch -p ./",
-    "install:all": "pnpm run install:webview && pnpm install",
+    "compile:debug": "tsc -p ./ --outDir ./dist",
+    "watch": "tsc -watch -p ./ --outDir ./dist",
+    "install:all": "npm run install:webview && npm run install:extension",
+    "install:extension": "yarn install",
     "install:webview": "cd webview-ui && pnpm install",
-    "build:all": "pnpm run build:webview && pnpm run compile",
-    "build:all-debug": "pnpm run build:webview-debug && pnpm run compile",
+    "build:all": "npm run build:webview && npm run compile",
+    "build:all-debug": "npm run build:webview-debug && npm run compile:debug",
     "start:webview": "cd webview-ui && pnpm run start",
     "build:webview": "cd webview-ui && pnpm run build",
     "build:webview-debug": "cd webview-ui && pnpm run build:dev",
-    "pretest": "pnpm run compile && pnpm run lint",
+    "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "vscode-test",
-    "pre-package:extension": "pnpm run install:webview && pnpm run build:webview",
+    "pre-package:extension": "npm run install:webview && npm run build:webview",
     "package:extension": "yarn install && vsce package --yarn"
   },
   "devDependencies": {
