--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -20,7 +20,7 @@
     "checking-tool-rcl": "0.9.10-beta.7",
     "deep-equal": "1.0.1",
     "dompurify": "^3.0.9",
-    "gitea-react-toolkit": "2.4.0",
+    "gitea-react-toolkit": "2.4.1-beta.2",
     "localforage": "^1.10.0",
     "marked": "^12.0.0",
     "prop-types": "^15.8.1",
