--- a/package.json
+++ b/package.json
@@ -191,7 +191,9 @@
     "start:webview": "cd webview-ui && pnpm run start",
     "build:webview": "cd webview-ui && pnpm run build",
     "build:webview-debug": "cd webview-ui && pnpm run build:dev",
+    "pretest": "yarn run compile:debug",
     "lint": "eslint src --ext ts",
+    "test": "vscode-test",
     "test:unit": "yarn run compile:debug && vscode-test",
     "pre-package:extension": "npm run install:webview && npm run build:webview",
     "package:extension": "yarn install && vsce package --yarn"
