--- a/webview-ui/package.json
+++ b/webview-ui/package.json
@@ -17,10 +17,10 @@
     "@material-ui/lab": "4.0.0-alpha.61",
     "@mui/lab": "5.0.0-alpha.89",
     "@vscode/webview-ui-toolkit": "^1.4.0",
-    "checking-tool-rcl": "0.9.10-beta.7",
+    "checking-tool-rcl": "0.9.10",
     "deep-equal": "1.0.1",
     "dompurify": "^3.0.9",
-    "gitea-react-toolkit": "2.4.1-beta.2",
+    "gitea-react-toolkit": "2.4.1-rc",
     "localforage": "^1.10.0",
     "marked": "^12.0.0",
     "prop-types": "^15.8.1",
