Feature add dcs support (#22)
* Adding DCS authentication - move code to checking-tool-rcl

* Adding authentication support

* build fix

* build fix missing deep-equals

* working on header and title bar

* working on menu drawer and login prompt

* updated gitea-react-toolkit so it doesn't used path module that is not supported by vscode webview.
fixed watch script, and added debug build options.  Switched from pnpm back to yarn for server side

* working on unit testing setup

* working on unit testing setup

* working on flattenGroupData and checkDataToTwl

* fix conversion to tsv

* tweak test script

* added checkDataToTn()

* added comments and bookmarks for later

* added unit tests for checkDataToTn()

* working on adding secret storage

* persisting auth storage

* refactor

* getting callback on get secret

* fixed fix to save secret objects as json strings, and to convert fetched data back to objects

* fixed fix to save secret objects as json strings, and to convert fetched data back to objects

* update dependencies

* update dependencies

---------

Co-authored-by: PhotoNomad0 <bruce.mclean@unfoldingword.org>

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "checking-extension",
   "displayName": "checking-extension",
   "description": "A vscode extension to open tn_check and twl_check files for checking verses",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "publisher": "unfoldingWord",
   "engines": {
     "vscode": "^1.91.0"
@@ -181,17 +181,21 @@
     "webpack-dev": "webpack --mode development --watch",
     "test-compile": "tsc -p ./",
     "compile": "npm run webpack",
-    "watch": "tsc -watch -p ./",
-    "install:all": "pnpm run install:webview && pnpm install",
+    "compile:debug": "tsc -p ./ --outDir ./dist",
+    "watch": "tsc -watch -p ./ --outDir ./dist",
+    "install:all": "npm run install:webview && npm run install:extension",
+    "install:extension": "yarn install",
     "install:webview": "cd webview-ui && pnpm install",
-    "build:all": "pnpm run build:webview && pnpm run compile",
+    "build:all": "npm run build:webview && npm run compile",
+    "build:all-debug": "npm run build:webview-debug && npm run compile:debug",
     "start:webview": "cd webview-ui && pnpm run start",
     "build:webview": "cd webview-ui && pnpm run build",
     "build:webview-debug": "cd webview-ui && pnpm run build:dev",
-    "pretest": "pnpm run compile && pnpm run lint",
+    "pretest": "yarn run compile:debug",
     "lint": "eslint src --ext ts",
     "test": "vscode-test",
-    "pre-package:extension": "pnpm run install:webview && pnpm run build:webview",
+    "test:unit": "yarn run compile:debug && vscode-test",
+    "pre-package:extension": "npm run install:webview && npm run build:webview",
     "package:extension": "yarn install && vsce package --yarn"
   },
   "devDependencies": {
