--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,10 +42,7 @@ jobs:
       - name: Install Extension Dependencies
         run: npm run install:extension
 
-#      - name: Run Unit Tests
-#        run: npm run test:unit
-
-      - name: Run Unit Tests with emulated UI
+      - name: Run Unit Tests with emulated X server
         run: |
           xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" \
           npm run test:unit
