Feature resource improvements (#23)
* move checking resources into project

* optimization after save so that update does not completely recreate view.  Update view to only change selection and do partial rerender.

* optimization of save selection changes

* revert file change logic

* clean up

* added vertical scroll on overflow

* cleanup

* remove unsupported menu items

* remove unsupported menu items

* test cleanup

* fix auto build

* fix vscode-test

* fix webview-ui version

* fix windows paths

* fix copy logic

* cleanup build.yml

---------

Co-authored-by: PhotoNomad0 <bruce.mclean@unfoldingword.org>

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "checking-extension",
   "displayName": "checking-extension",
   "description": "A vscode extension to open tn_check and twl_check files for checking verses",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "publisher": "unfoldingWord",
   "engines": {
     "vscode": "^1.91.0"
@@ -195,7 +195,7 @@
     "lint": "eslint src --ext ts",
     "test": "vscode-test",
     "test:unit": "yarn run compile:debug && vscode-test",
-    "pre-package:extension": "npm run install:webview && npm run build:webview",
+    "pre-package:webview": "npm run install:webview && npm run build:webview",
     "package:extension": "yarn install && vsce package --yarn"
   },
   "devDependencies": {
