--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,9 +36,17 @@ jobs:
       - name: Install vsce
         run: npm install -g @vscode/vsce
 
-      - name: Install and build webview
-        run: npm run pre-package:extension
+      - name: Install Dependencies and build webview
+        run: npm run pre-package:webview
 
+      - name: Install Extension Dependencies
+        run: npm run install:extension
+
+      - name: Run Unit Tests with emulated X server
+        run: |
+          xvfb-run --auto-servernum --server-args="-screen 0 1024x768x24" \
+          npm run test:unit
+            
       - name: Package Extension
         run: yarn run package:extension
 
