--- a/package.json
+++ b/package.json
@@ -168,8 +168,8 @@
     "original-fs": "^1.2.0",
     "ospath": "^1.2.2",
     "string-punctuation-tokenizer": "^2.2.0",
-    "tc-source-content-updater": "1.4.30-beta.5",
-    "tsv-groupdata-parser": "^1.1.0",
+    "tc-source-content-updater": "1.4.30-beta.6",
+    "tsv-groupdata-parser": "1.1.1-beta.1",
     "typescript": "^5.4.5",
     "usfm-js": "^3.4.2",
     "uw-tsv-parser": "^1.0.3",
