fix to get correct original language version for check type

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
               "altText": "Select Project Folder"
             },
             "completionEvents": [
-              "onContext:preRelease"
+              "onContext:fetchedCatalog"
             ],
             "when": "preRelease"
           },
