--- a/package.json
+++ b/package.json
@@ -159,6 +159,7 @@
     "package:extension": "yarn install && vsce package --yarn"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.4.0",
     "ts-loader": "^9.5.1",
@@ -172,6 +173,7 @@
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.11.0",
     "@vscode/codicons": "^0.0.35",
+    "axios": "^1.7.7",
     "bible-reference-range": "^1.1.1",
     "deep-equal": "1.0.1",
     "eslint": "^8.57.0",
