--- a/package.json
+++ b/package.json
@@ -176,6 +176,7 @@
     "axios": "^1.7.7",
     "bible-reference-range": "^1.1.1",
     "deep-equal": "1.0.1",
+    "diff": "^5.2.0",
     "eslint": "^8.57.0",
     "eslint-config-eslint": "^11.0.0",
     "eslint-plugin-jsdoc": "^48.10.1",
