--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
       }
     ]
   },
+  "private": true,
   "scripts": {
     "vscode:prepublish": "webpack --mode production",
     "webpack": "webpack --mode development",
