--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "checking-extension",
   "displayName": "checking-extension",
   "description": "A vscode extension to open tn_check and twl_check files for checking verses",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "publisher": "unfoldingWord",
   "engines": {
     "vscode": "^1.91.0"
@@ -25,6 +25,10 @@
       {
         "title": "Translation Checking: Launch Initialize - WARNING Prerelease Resources",
         "command": "checking-extension.launchWorkflowPre"
+      },
+      {
+        "title": "Translation Checking: Download Project",
+        "command": "checking-extension.downloadProject"
       }
     ],
     "customEditors": [
@@ -134,6 +138,7 @@
       }
     ]
   },
+  "private": true,
   "scripts": {
     "vscode:prepublish": "webpack --mode production",
     "webpack": "webpack --mode development",
@@ -159,6 +164,7 @@
     "package:extension": "yarn install && vsce package --yarn"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.4.0",
     "ts-loader": "^9.5.1",
@@ -172,8 +178,10 @@
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.11.0",
     "@vscode/codicons": "^0.0.35",
+    "axios": "^1.7.7",
     "bible-reference-range": "^1.1.1",
     "deep-equal": "1.0.1",
+    "diff": "^5.2.0",
     "eslint": "^8.57.0",
     "eslint-config-eslint": "^11.0.0",
     "eslint-plugin-jsdoc": "^48.10.1",
@@ -182,7 +190,7 @@
     "original-fs": "^1.2.0",
     "ospath": "^1.2.2",
     "string-punctuation-tokenizer": "^2.2.0",
-    "tc-source-content-updater": "1.4.30",
+    "tc-source-content-updater": "1.4.31",
     "tsv-groupdata-parser": "^1.1.1",
     "typescript": "^5.4.5",
     "usfm-js": "^3.4.2",
